--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -18,22 +18,26 @@
                 <div class="calc__buttons button">
                     <button data-action="clear" class="button__clear">C</button>
                     <button data-action="delete" class="button__delete"></button>
-<!--                    <a href="#" class="button__delete"></a>-->
-                    <a href="#" class="button__blue div">÷</a>
+<!--                    <a href="#" class="button__blue div">÷</a>-->
+                    <button data-action="div" class="button__blue div">÷</button>
                     <button data-action="number" class="button__number">7</button>
-                    <a href="#" class="button__number">8</a>
-                    <a href="#" class="button__number">9</a>
-                    <a href="#" class="button__blue mult">×</a>
-                    <a href="#" class="button__number">4</a>
-                    <a href="#" class="button__number">5</a>
-                    <a href="#" class="button__number">6</a>
-                    <a href="#" class="button__blue sub">–</a>
-                    <a href="#" class="button__number">1</a>
-                    <a href="#" class="button__number">2</a>
-                    <a href="#" class="button__number">3</a>
-                    <a href="#" class="button__blue sum">+</a>
-                    <a href="#" class="button__zero">0</a>
-                    <a href="#" class="button__blue">=</a>
+                    <button data-action="number" class="button__number">8</button>
+                    <button data-action="number" class="button__number">9</button>
+<!--                    <a href="#" class="button__blue mult">×</a>-->
+                    <button data-action="div" class="button__blue mult">×</button>
+                    <button data-action="number" class="button__number">4</button>
+                    <button data-action="number" class="button__number">5</button>
+                    <button data-action="number" class="button__number">6</button>
+                    <button data-action="sub" class="button__blue sub">–</button>
+<!--                    <a href="#" class="button__blue sub">–</a>-->
+                    <button data-action="number" class="button__number">1</button>
+                    <button data-action="number" class="button__number">2</button>
+                    <button data-action="number" class="button__number">3</button>
+<!--                    <a href="#" class="button__blue sum">+</a>-->
+                    <button data-action="sum" class="button__blue sum">+</button>
+                    <button data-action="number" class="button__zero">0</button>
+                    <button data-action="result" class="button__blue">=</button>
+<!--                    <a href="#" class="button__blue">=</a>-->
                 </div>
             </div>
         </main>
