feat: finish the basic functional

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -13,7 +13,8 @@
         <main class="calc">
             <div class="calc__container _container">
                 <div class="calc__display">
-                    <input tabindex="-1" maxlength="5" type="number" class="calc__result" placeholder="0" autofocus>
+<!--                    <input tabindex="-1" maxlength="5" type="number" class="calc__result" placeholder="0" autofocus>-->
+                    <div class="calc__result">0</div>
                 </div>
                 <div class="calc__buttons button">
                     <button data-action="clear" class="button__clear">C</button>
