feat: add view modul,button styles, message error

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -43,6 +43,6 @@
             </div>
         </main>
     </div>
-    <script src="js/index_calc_ui.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
